tests/errors/invalid-group.typ
#import "../../src/lib.typ": score
#score(group: "square", time: "4/4", bars: ((notes: "C5:w"),))
